--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,9 @@
 /* Reset padding and margin */
 
+html {
+  background-color: #492a7c;
+}
+
 body {
   padding: 64px 32px;
   font: 18px/1.5 "Avenir", "Avenir Next", "Helvetica Neue", Arial, sans-serif;
