--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ html {
 body {
   padding: 64px 32px;
   font: 18px/1.5 "Avenir", "Avenir Next", "Helvetica Neue", Arial, sans-serif;
-  background-color: white;
+  background-color: #492a7c;
 }
 
 header,
